<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_background">

    <LinearLayout
        android:id="@+id/sex_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_choose_camera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_default"
            android:layout_marginTop="@dimen/widget_padding_defalut"
            android:layout_marginRight="@dimen/text_margin_default"
            android:background="@drawable/bt_press_change"
            android:button="@null"
            android:text="@string/str_dialog_chose_item1"
            android:textAppearance="?android:textAppearanceSmall"/>

        <Button
            android:id="@+id/btn_choose_album"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_default"
            android:layout_marginTop="@dimen/widget_padding_defalut"
            android:layout_marginRight="@dimen/text_margin_default"
            android:background="@drawable/bt_press_change"
            android:button="@null"
            android:text="@string/str_dialog_chose_item2"
            android:textAppearance="?android:textAppearanceSmall"/>


        <Button
            android:id="@+id/btn_choose_ocr_normal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_default"
            android:layout_marginTop="@dimen/widget_padding_defalut"
            android:layout_marginRight="@dimen/text_margin_default"
            android:background="@drawable/bt_press_change"
            android:button="@null"
            android:text="@string/str_dialog_chose_item3"
            android:textAppearance="?android:textAppearanceSmall"/>

        <Button
            android:id="@+id/btn_cancel_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_default"
            android:layout_marginTop="@dimen/widget_padding_defalut"
            android:layout_marginRight="@dimen/text_margin_default"
            android:background="@null"
            android:text="@string/str_dialog_cancle"
            android:textAppearance="?android:textAppearanceSmall"/>
    </LinearLayout>

</RelativeLayout>